
For more details and developer visible changes see the ChangeLog

-------------------------------------------------------------------------------
Tomdroid <version-code> - "<version-name>" released on <release-date>

* fixed bug lp:1039703 Tomdroid crashes when rotating the device during synchronisation
* fixed bug lp:1039824 Crash when rotate on Revert All

-------------------------------------------------------------------------------
Tomdroid 0.7.1 beta - "Fast paced" released on 2012-08-21

* Actionbar for all versions of Android
* Converted format bar to sliding drawer
* Added progress bar and toast notifications to preferences
* Cosmetic improvements and bug fixes with conflict resolution
* Added cancel button to sync
* Fixed revert all for deleted notes
* Added routine to avoid full sync if server revision is old (only push changed notes)
* Set note content entry type to "sentence caps"
* Usability and cosmetic improvements (lp:1038118, lp:1038352)
* fixed bug lp:1038115 (beta) do not scroll list to top after deleting a note
* fixed bug lp:1038119 (beta) syncing is not smart :)
* fixed bug lp:1038352 tapping on blank area should go to end of line
* fixed bug lp:1038769 Typo in the string #41
* fixed bug lp:1038968 NullPointerException on SD Card sync with notes causing parse error

-------------------------------------------------------------------------------
Version 0.6.1 - "Polyglot" released on <releaseDate>

* New translations: bs, el, eo, fa, fi, nb, si, ta
* Updated translations: ar, ca, cs, da, de, en-rGB, es, eu, fo, fr, gd, hi, hu, it, ja, ko, ms, pl, pt-rBR, pt, ru, sv, te, tr, ug, uk, zh-rCN, zh

-------------------------------------------------------------------------------
Tomdroid 0.7 beta - "House of Fun" - Editing and Two-Way Sync!

Editing Features:
* Rich text editor for editing and formatting notes (credit: http://code.google.com/p/android-richtexteditor/)
* Ability to create new notes
* Ability to delete local notes (lp:657563)